# image-caption-scraper

./: .gitignore  LICENSE  README.md  Untitled.ipynb  clear.sh  expansion.py  helper.py  requirements.txt  run.py  setup.cfg  setup.py
src/example_pkg_alishibli97.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/image_caption_scraper/: Untitled.ipynb  __init__.py  codes.txt  config.json  data.json  expansion.py  helper.py  main.py  scraper.py
src/image_caption_scraper.egg-info/: PKG-INFO  SOURCES.txt
src/image_caption_scraper_test.egg-info/: PKG-INFO  SOURCES.txt
src/image_caption_scraper_tester2.egg-info/: PKG-INFO  SOURCES.txt
tests/: main.py
