[metadata]
name = image-caption-scraper-tester2
version = 0.0.9
author = Ali Shibli
author_email = alishibli97@hotmail.com
description = A package for scraping images alongside captions from online search engines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alishibli97/image-caption-scraper
project_urls =
    Bug Tracker = https://github.com/alishibli97/image-caption-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

